use virtual threads for HTTP/2, if available