@@ -16,8 +16,13 @@ package com.predic8.membrane.core.util;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.net.Socket;
 import java.util.HashMap;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 import javax.mail.internet.ParseException;
 import javax.net.ssl.SSLSocket;
@@ -27,8 +32,12 @@ import com.fasterxml.jackson.core.JsonParseException;
 import com.fasterxml.jackson.core.JsonParser;
 
 import com.predic8.membrane.core.http.Response;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class Util {
+
+	private static final Logger LOG = LoggerFactory.getLogger(Util.class);
 
 	public static void shutdownOutput(Socket socket) throws IOException {
 		if (!(socket instanceof SSLSocket) &&
@@ -74,5 +83,37 @@ public class Util {
 		return values;
 	}
 
+	private static Method newVirtualThreadPerTaskExecutor;
+	private static AtomicBoolean loggedVirtualThreads = new AtomicBoolean();
+
+	static {
+		try {
+			if (!"false".equals(System.getProperty("membrane.virtualthreads"))) {
+				newVirtualThreadPerTaskExecutor = Executors.class.getMethod("newVirtualThreadPerTaskExecutor", new Class[0]);
+			}
+		} catch (NoSuchMethodException e) {
+		}
+	}
+
+	public static ExecutorService createNewThreadPool() {
+		if (newVirtualThreadPerTaskExecutor != null) {
+			try {
+				ExecutorService executorService = (ExecutorService) newVirtualThreadPerTaskExecutor.invoke(null, new Object[0]);
+				if (loggedVirtualThreads.compareAndSet(false, true))
+					LOG.info("Using virtual threads. (Use -Dmembrane.virtualthreads=false to disable.)");
+				return executorService;
+			} catch (IllegalAccessException e) {
+				throw new RuntimeException(e);
+			} catch (InvocationTargetException e) {
+				if (e.getCause() instanceof UnsupportedOperationException) {
+					LOG.warn("Using traditional threads instead of virtual threads. Use the JVM option --enable-preview to enable virtual threads. (Or use -Dmembrane.virtualthreads=false to disable this warning.)");
+					newVirtualThreadPerTaskExecutor = null;
+				} else {
+					throw new RuntimeException(e);
+				}
+			}
+		}
+		return Executors.newCachedThreadPool();
+	}
 
 }
